# v8_jscore_backend

./: CMakeLists.txt  make_ios.sh  make_osx_develop.sh  make_win_static.sh
include/: ._v8.h  ._v8config.h  v8.h
src/: ._v8-impl.cc  v8-impl.cc
test/: ._hello-world.cc  hello-world.cc  make_win64_qjs.bat  make_win64_v8.bat
